# LiNaStore

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  package.sh
.github/workflows/: lint.yml  release.yml
.linaserver/: meta
client/c/: Makefile
client/c/src/: crc32.c  crc32.h  linaclient.c  linaclient.h
client/cpp/: Makefile
client/cpp/src/: crc32.cpp  crc32.h  linaclient.cpp  linaclient.h  token_management.cpp
client/java/: pom.xml
client/java/src/main/java/cc/aimerick/linastore/: LiNaFlags.java  LiNaStoreClient.java
client/java/src/main/java/com/aimerick/linastore/: LiNaFlags.java  LiNaStoreClient.java
client/python/: __init__.py  lina_client.py  pyproject.toml
driver/: linastore_client.py
driver/java/: LiNaFlags.java  LiNaStoreClient.java
driver/python/: __init__.py  linastore_client.py
linabase/: Cargo.toml
linabase/src/: dao.rs  lib.rs  service.rs  utils.rs
linafs/: Cargo.toml
linafs/src/: command.rs  fuse.rs  handler.rs  main.rs
linastore/: Cargo.toml
linastore-server/: Cargo.toml
linastore-server/src/: auth.rs  error.rs  main.rs  mapper.rs  porter.rs  utils.rs  vars.rs
linastore-server/src/db/migrations/mysql/: 000001_init_auth.sql
linastore-server/src/db/migrations/sqlite/: 000001_init_auth.sql
linastore-server/src/front/: advanced_service.rs  http_service.rs  manager.rs  mod.rs  s3_service.rs
src/: auth.rs  conveyer.rs  dtos.rs  front.rs  main.rs  ordque.rs  porter.rs  shutdown.rs  utils.rs  vars.rs  waitress.rs
src/db/: mod.rs
src/db/migrations/mysql/: 000001_init_auth.sql
src/db/migrations/postgres/: 000001_init_auth.sql
src/db/migrations/sqlite/: 000001_init_auth.sql
src/front/: advanced_service.rs  http_service.rs  manager.rs  mod.rs  self_service.rs  simple_service.rs  waitress.rs
src/linabase/: Cargo.toml
src/linabase/src/: dao.rs  lib.rs  service.rs  utils.rs
tests/: TestJavaClient.java  advanced_protocol_test.py  e2e_tests.rs  run_all_tests.sh  test_c_client.c  test_cpp_client.cpp  test_python_client.py
