[package]
name = "linastore-server"
version = "0.1.0"
edition = "2024"

[dependencies]
linabase = { path = "./linabase" }
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "signal"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.1"
bytes = "1.10.1"
crc32fast = "1.4.2"
anyhow = "1.0.98"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.145"

[features]
simd = []

[[bin]]
name = "linastore"
path = "src/bin/linastore.rs"

[profile.release]
opt-level = 2
lto = true
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.23.0"
reqwest = { version = "0.12", features = ["blocking"] }
