[package]
name = "linabase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = "0.4.41"
flate2 = "1.1.2"
nanoid = "0.4.0"
rand = "0.9.1"
rayon = "1.10.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "signal"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level = 3
lto = true
