[package]
name = "linabase"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
bytes = "1.10"
chrono = "0.4"
flate2 = "1.1"
nanoid = "0.4"
rand = "0.9"
rayon = "1.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "signal"] }
uuid = { version = "1.17", features = ["v4"] }
 [dev-dependencies]
 tempfile = "3.23"
