[package]
name = "linafs"
version = "0.1.0"
edition = "2024"

[dependencies]
linabase = { path = "../linabase" }
clap = { version = "4.5.50", default-features = false, features = ["derive", "std", "help", "usage"] }
fuser = "0.17"
tokio = { version = "1.47.2", features = ["rt-multi-thread", "macros"] }
libc = "0.2"
