[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linastore-client"
version = "0.1.0"
description = "LiNaStore Python client"
requires-python = ">=3.9"
authors = [{ name = "LiNaStore" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/linastore"

[tool.setuptools]
py-modules = ["lina_client"]
